# dotfiles

any-project/: README.md
any-project/.github/: CONTRIBUTING.md
config/python/: readme.md
docker-project/.github/workflows/: docker-build-publish-ghcr.yml  webhook-deploy-after-build.yml
dockerfile/: readme.md
dockerfile/golang/: readme.md
dockerfile/python/: readme.md
global/: README.md
golang-project/: Dockerfile
python-project/: Dockerfile  pyproject.toml
python-project/.github/workflows/: linting.yml
